# ed

./: CMakeLists.txt  LICENSE  README.md
examples/: hubbard_1d.cpp
src/: Assert.h  Binomial.h  CMakeLists.txt  Combinations.h  Hamiltonian.h  MomentumSpace.h  RealSpace.h  SparseMatrix.h  State.h  Timing.cpp  Timing.h
test/: CMakeLists.txt  test-binomial.cpp  test-combinations.cpp  test-hamiltonian.cpp  test-momentum-space.cpp  test-state.cpp
tools/: format
